Adding work on weather EMR and mrjob

--- a/notebooks/weather.mapreduce/weather_MRjob.ipynb
+++ b/notebooks/weather.mapreduce/weather_MRjob.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e4ec5feb7630a0143c28b66701392a906d44e1127d87562cce9c169a78629db8"
+  "signature": "sha256:3d5ee64fc7901dc7017c48752379838bef576e37a7af8424bd29579b6b95c7ad"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -49,9 +49,8 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "ALL.head.csv                data-source.txt             ghcnd-stations_buffered.txt\r\n",
-        "SAMPLE_TMAX.csv             ghcnd-readme.txt            ghcnd-version.txt\r\n",
-        "SAMPLE_TMAX.csv.old.gz      ghcnd-stations.txt\r\n"
+        "ALL.head.csv                SAMPLE_TMAX.csv.old.gz      ghcnd-readme.txt            ghcnd-stations_buffered.txt\r\n",
+        "SAMPLE_TMAX.csv             data-source.txt             ghcnd-stations.txt          ghcnd-version.txt\r\n"
        ]
       },
       {
@@ -81,50 +80,17 @@
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "rm: Stat2Lat.pkl: No such file or directory\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "-rw-r--r--  1 yoavfreund  staff  8051413 May  7 19:18 stations.pkl\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "stations.pkl.gz already exists -- do you wish to overwrite (y or n)? "
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "^C\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "-rw-r--r--  1 yoavfreund  staff  8051413 May  7 19:18 stations.pkl\r\n",
-        "-rw-r--r--  1 yoavfreund  staff  1826703 May  7 18:00 stations.pkl.gz\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "-rw-r--r--  1 yoavfreund  staff  7334424 Apr 15 09:04 ../../data/weather/ghcnd-stations.txt\r\n"
+       "ename": "NameError",
+       "evalue": "name 'stations' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-3-c493ec3dc061>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'stations.pkl'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'wb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstations\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mHIGHEST_PROTOCOL\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mu'rm Stat2Lat.pkl'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mu'ls -l stations.pkl'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;31mNameError\u001b[0m: name 'stations' is not defined"
        ]
       }
      ],
-     "prompt_number": 30
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -330,12 +296,12 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "station,year,measurement,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126,127,128,129,130,131,132,133,134,135,136,137,138,139,140,141,142,143,144,145,146,147,148,149,150,151,152,153,154,155,156,157,158,159,160,161,162,163,164,165,166,167,168,169,170,171,172,173,174,175,176,177,178,179,180,181,182,183,184,185,186,187,188,189,190,191,192,193,194,195,196,197,198,199,200,201,202,203,204,205,206,207,208,209,210,211,212,213,214,215,216,217,218,219,220,221,222,223,224,225,226,227,228,229,230,231,232,233,234,235,236,237,238,239,240,241,242,243,244,245,246,247,248,249,250,251,252,253,254,255,256,257,258,259,260,261,262,263,264,265,266,267,268,269,270,271,272,273,274,275,276,277,278,279,280,281,282,283,284,285,286,287,288,289,290,291,292,293,294,295,296,297,298,299,300,301,302,303,304,305,306,307,308,309,310,311,312,313,314,315,316,317,318,319,320,321,322,323,324,325,326,327,328,329,330,331,332,333,334,335,336,337,338,339,340,341,342,343,344,345,346,347,348,349,350,351,352,353,354,355,356,357,358,359,360,361,362,363,364,365\r\n",
-        "ASN00054128,DAPR,1969,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,2,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,\r\n"
+        "ASN00054128,DAPR,1969,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,2,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,\r\n",
+        "ASN00054128,DAPR,1971,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,3,,,,,,,3,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,\r\n"
        ]
       }
      ],
-     "prompt_number": 33
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -658,9 +624,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "job_flow_id='j-1HFD8T7K9LGVH'\n",
+      "job_flow_id='j-BPX1DCPJZHBT'\n",
       "#!python mr_weather.py -r emr  --emr-job-flow-id=$job_flow_id hdfs:/weather/weather.csv > counts\n",
-      "!python mr_weather.py -r emr -c /Users/yoavfreund/BigData/mrjob/Student_Config --emr-job-flow-id=$job_flow_id hdfs:/weather/weather.csv > counts\n",
+      "!python mr_weather.py -r emr  --emr-job-flow-id=$job_flow_id hdfs:/weather/weather.csv > counts\n",
       "#!python mr_weather.py -r emr -c /Users/yoavfreund/BigData/mrjob/Student_Config --emr-job-flow-id=$job_flow_id hdfs:/weather/weather.csv > counts"
      ],
      "language": "python",
@@ -670,130 +636,38 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "creating tmp directory /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_weather.yoavfreund.20140510.001457.462577\r\n"
+        "using configs in /Users/yoavfreund/.mrjob.conf\r\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Copying non-input files into s3://yoav.hadoop/scratch/mr_weather.yoavfreund.20140510.001457.462577/files/\r\n"
+        "creating tmp directory /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_weather.yoavfreund.20140511.164825.100696\r\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Adding our job to existing job flow j-1HFD8T7K9LGVH\r\n"
+        "Copying non-input files into s3://yoav.hadoop/scratch/mr_weather.yoavfreund.20140511.164825.100696/files/\r\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Job launched 30.5s ago, status RUNNING: Running step (mr_weather.yoavfreund.20140510.001457.462577: Step 1 of 1)\r\n"
+        "Adding our job to existing job flow j-BPX1DCPJZHBT\r\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Job launched 61.0s ago, status RUNNING: Running step (mr_weather.yoavfreund.20140510.001457.462577: Step 1 of 1)\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Job launched 91.6s ago, status RUNNING: Running step (mr_weather.yoavfreund.20140510.001457.462577: Step 1 of 1)\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Job launched 122.1s ago, status RUNNING: Running step (mr_weather.yoavfreund.20140510.001457.462577: Step 1 of 1)\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Job launched 152.5s ago, status RUNNING: Running step (mr_weather.yoavfreund.20140510.001457.462577: Step 1 of 1)\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Job completed.\r\n",
-        "Running time was 134.0s (not counting time spent waiting for the EC2 instances)\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Fetching counters from SSH...\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Counters from step 1:\r\n",
-        "  File Input Format Counters :\r\n",
-        "    Bytes Read: 7670826853\r\n",
-        "  File Output Format Counters :\r\n",
-        "    Bytes Written: 1529\r\n",
-        "  FileSystemCounters:\r\n",
-        "    FILE_BYTES_READ: 25104\r\n",
-        "    FILE_BYTES_WRITTEN: 1975972\r\n",
-        "    HDFS_BYTES_READ: 7670832733\r\n",
-        "    S3_BYTES_WRITTEN: 1529\r\n",
-        "  Job Counters :\r\n",
-        "    Data-local map tasks: 59\r\n",
-        "    Launched map tasks: 61\r\n",
-        "    Launched reduce tasks: 12\r\n",
-        "    Rack-local map tasks: 2\r\n",
-        "    SLOTS_MILLIS_MAPS: 2299255\r\n",
-        "    SLOTS_MILLIS_REDUCES: 280844\r\n",
-        "    Total time spent by all maps waiting after reserving slots (ms): 0\r\n",
-        "    Total time spent by all reduces waiting after reserving slots (ms): 0\r\n",
-        "  Map-Reduce Framework:\r\n",
-        "    CPU time spent (ms): 1066500\r\n",
-        "    Combine input records: 9358394\r\n",
-        "    Combine output records: 5078\r\n",
-        "    Map input bytes: 7668888728\r\n",
-        "    Map input records: 9358394\r\n",
-        "    Map output bytes: 84225546\r\n",
-        "    Map output materialized bytes: 68458\r\n",
-        "    Map output records: 9358394\r\n",
-        "    Physical memory (bytes) snapshot: 29502435328\r\n",
-        "    Reduce input groups: 133\r\n",
-        "    Reduce input records: 5078\r\n",
-        "    Reduce output records: 133\r\n",
-        "    Reduce shuffle bytes: 68458\r\n",
-        "    SPLIT_RAW_BYTES: 5880\r\n",
-        "    Spilled Records: 10156\r\n",
-        "    Total committed heap usage (bytes): 28353495040\r\n",
-        "    Virtual memory (bytes) snapshot: 126861185024\r\n",
-        "  MrJob Counters:\r\n",
-        "    mapper: 9358394\r\n",
-        "    reducer: 133\r\n",
-        "Streaming final output from s3://yoav.hadoop/scratch/mr_weather.yoavfreund.20140510.001457.462577/output/\r\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "removing tmp directory /var/folders/80/c2kfvdvx5cx570r4vlzqgb840000gq/T/mr_weather.yoavfreund.20140510.001457.462577\r\n",
-        "Removing all files in s3://yoav.hadoop/scratch/mr_weather.yoavfreund.20140510.001457.462577/\r\n"
+        "Job launched 30.5s ago, status RUNNING: Running step (mr_weather.yoavfreund.20140511.164825.100696: Step 1 of 1)\r\n"
        ]
       }
-     ],
-     "prompt_number": 37
+     ]
     },
     {
      "cell_type": "code",
@@ -805,43 +679,6 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 35
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "!cat /Users/yoavfreund/BigData/mrjob/Student_Config"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "# This is a mrjob cnfiguration file that should work \r\n",
-        "# for the students in the UCSD big data class\r\n",
-        "# \r\n",
-        "runners:\r\n",
-        "  name: Weather_Test\r\n",
-        "  owner: Yoav_Freund\r\n",
-        "  emr:\r\n",
-        "    # Region to connect to S3 and EMR on (e.g. us-west-1).\r\n",
-        "    aws_region: us-east-1\r\n",
-        "    # Availability zone to run the job flow on\r\n",
-        "    aws_availability_zone: us-east-1d\r\n",
-        "    aws_access_key_id: AKIAILCBPY5XVX7KMNRQ\r\n",
-        "    aws_secret_access_key: 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\r\n",
-        "    ec2_key_pair: HadoopKeyPair\r\n",
-        "    ec2_key_pair_file: /Users/yoavfreund/.ssh/HadoopKeyPair.pem\r\n",
-        "    s3_log_uri: s3://yoav.hadoop/logs/\r\n",
-        "    #                    URI on S3 to write logs into\r\n",
-        "    s3_scratch_uri: s3://yoav.hadoop/scratch/\r\n",
-        "    #                    URI on S3 that is used as scratch space\r\n"
-       ]
-      }
-     ],
-     "prompt_number": 6
     },
     {
      "cell_type": "code",
