Checked some of the HW2 notebooks

--- a/notebooks/HW2/Future suggestions.ipynb
+++ b/notebooks/HW2/Future suggestions.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b7aaa1fec9e7db32fe24ddf4b5364f828b322e65ac8b813f67774485e6a91dc5"
+  "signature": "sha256:b8e1dfd5a603e9c85523014c9fc03c957851ca8d1618f2e4d2eb59539498f486"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -24,6 +24,12 @@
       "    1. Package code into functions/classes and write into .py files\n",
       "    1. Write numerical results into a PKL file with a dictionary that hold the variables of interest. \n",
       "        \n",
+      "###Project Teams ###\n",
+      "Each team should include at least 3 people, each of which has one of the following responsibilities:\n",
+      "1. Programmer: responsible to write most of the code and for it being correct and efficient.\n",
+      "1. Statistician: Analyze the output of the statistical analysis, verify that they are correct using synthetic data. Identify the parameters to use: how many eigen-vectors, which measurements, which areas of the world etc. Propose hypotheses and test them.\n",
+      "1. Story-teller: in charge of telling the overall story of the analysis and how it relates to the world's weather.\n",
+      "\n",
       "###Specific comments based on HW2 submissions###\n",
       "1. To avoid very skinny or very wide regions: first partition into fixed size squares(say 10 latitude and 10 longitude) and then partition each of the squares (if it has enough measurements) into smaller pieces.\n",
       "1. Be sure you are calculating percentage of variance explained correctly. For a single station the mean should already explain most of the variance. Look for the knee in the graph for each group. Separate out the stations for which a small number of eigen-vectors explains a lot. As a rule of thumb, the number of eigenvectors you use should be smaller than 10.\n",
@@ -91,7 +97,7 @@
        ]
       }
      ],
-     "prompt_number": 42
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -106,31 +112,37 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "size of vector=         1, memory size: 14196736 bytes\r\n",
-        "size of vector=        10, memory size: 14196736 bytes\r\n",
-        "size of vector=       100, memory size: 14196736 bytes\r\n",
-        "size of vector=      1000, memory size: 14196736 bytes\r\n",
-        "size of vector=     10000, memory size: 14278656 bytes\r\n",
-        "size of vector=    100000, memory size: 15081472 bytes\r\n",
-        "size of vector=   1000000, memory size: 23085056 bytes\r\n"
+        "size of vector=         1, memory size: 13762560 bytes\r\n",
+        "size of vector=        10, memory size: 13762560 bytes\r\n",
+        "size of vector=       100, memory size: 13762560 bytes\r\n",
+        "size of vector=      1000, memory size: 13762560 bytes\r\n",
+        "size of vector=     10000, memory size: 13848576 bytes\r\n",
+        "size of vector=    100000, memory size: 14651392 bytes\r\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "size of vector=  10000000, memory size: 103088128 bytes\r\n"
+        "size of vector=   1000000, memory size: 22654976 bytes\r\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "size of vector= 100000000, memory size: 903090176 bytes\r\n"
+        "size of vector=  10000000, memory size: 102670336 bytes\r\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "size of vector= 100000000, memory size: 902684672 bytes\r\n"
        ]
       }
      ],
-     "prompt_number": 43
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -178,27 +190,27 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "249647.577209 numpy 0.002152\n",
-        "249647.577209"
+        "249728.864553 numpy 0.001891\n",
+        "249728.864553"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        " comprehension 0.867562\n",
-        "249647.577209"
+        " comprehension 0.996164\n",
+        "249728.864553"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        " for loop 0.998075\n"
+        " for loop 0.9859\n"
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
